# generous-tipper

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: cicd.yml
config/: data_config.yml  train_config.yml
data/processed/: processed_data.csv
frontend/: index.html  script.js  styles.css
notebooks/: EDA.ipynb  building_ML_model.ipynb  hypothesis_testing.ipynb  understanding_data.ipynb
src/: cli.py
src/api/: api_app.py  health_route.py  predict_route.py  wrapper.py
src/data_pipeline/: __init__.py  dataset.py  feature_engineering.py  preprocessing.py  splitter.py
src/model_pipeline/: tipper_models.py
src/training_pipeline/: train.py  tuning.py
src/utils/: configs.py  evaluate.py  logging.py  results_data.py  schemas.py
tests/: test_api_route.py  test_data_pipeline.py
