[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "generous_tipper"
version = "0.1.0"
description = "End-to-end ML project with FastAPI and CI"
requires-python = ">=3.9"

dependencies = [
    "scikit-learn==1.6.1",
    "pandas==2.3.3",
    "PyYAML==6.0.3",
    "fastapi==0.124.4",
    "uvicorn==0.38.0",
    "pytest==8.1.1",
    
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]